# purch

./: .dockerignore  .env  .env.template  .gitignore  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  prod.env  pyproject.toml
docker/: dockerfile.purch  dockerfile.test  pirch.dockerfile
pirch/: main.py
pirch/auth/: router.py  security.py
pirch/finance/: plaid.py  router.py  service.py  tokens.py  transactions.py
pirch/financial/: router.py  service.py
pirch/user/: engine.py  model.py  repository.py  router.py
pirch/utils/: config.py  database_init.py  financial.py  project_version.py  startup.py
prod/data/: categories.csv
purch/: main.py
purch/api/: dependencies.py  resolvers.py  startup.py
purch/api/routers/: __init__.py  auth.py  budget.py  finance.py  user.py
purch/auth/: router.py  schemas.py  security.py
purch/common/: config.py  dependencies.py  logger.py  repository.py
purch/core/: __init__.py  models.py  repository.py  startup.py  taskiq.py
purch/domains/: __init__.py  models.py
purch/domains/account/: models.py  repository.py
purch/domains/auth/: service.py
purch/domains/budget/: models.py  repository.py  (+2 more)
purch/finance/: models.py  plaid.py  repository.py  response_models.py  router.py  tasks.py  tokens.py  transactions.py
purch/graphql/: resolvers.py  schema.graphql
purch/plaid/: schemas.py  service.py  tokens.py
purch/taskiq/: __init__.py  dependencies.py  tasks.py
purch/user/: model.py  models.py  repository.py  router.py
purch/utils/: config.py  logger.py  repository.py  startup.py
test/: conftest.py  test_user.py
tests/: conftest.py  test_budget_tasks.py  test_finance_tasks.py  test_finances.py  test_plaid.py  test_settings.py  test_user.py  test_user_tasks.py
(+18 files in other folders)
