[project]
name = "pirch"
version = "0.1.0"
description = "Personal finance management tool"
authors = [{name="Andres Burch", email="acburch22@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=23.1.0",
    "fastapi[standard]>=0.115.12",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "pyyaml>=6.0.2",
    "ruff>=0.11.7",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
