[project]
name = "Purch"
version = "0.1.0"
description = "Personal finance management tool"
authors = [{name="Andres Burch", email="acburch22@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=23.1.0",
    "fastapi[standard]>=0.115.12",
    "passlib>=1.7.4",
    "plaid-python>=32.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "pyyaml>=6.0.2",
    "sqlmodel>=0.0.24",
    "taskiq-fastapi>=0.3.5",
    "taskiq-redis>=1.0.9",
    "taskiq[reload]>=0.11.17",
]

[dependency-groups]
dev = [
    "anyio>=4.9.0",
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.0",
    "requests>=2.32.3",
    "ruff>=0.11.13",
    "sqlalchemy>=2.0.40",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
